fix: Period closing voucher

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -231,8 +231,7 @@ Accounts Receivable Summary,Récapitulatif des Comptes débiteurs,context
 Accounts Receivable Summary,Récapitulatif des comptes débiteurs,
 Accounts Receivable Unpaid Account,Compte débiteur d'impayés,
 Accounts Receivable,Comptes débiteurs,
-Accounts Settings,Paramètres des Comptes,context
-Accounts Settings,Paramètres des comptes,
+Accounts Settings,Paramètres de comptabilité,
 Accounts User,Comptable,
 Accounts table cannot be blank.,Le tableau de comptes ne peut être vide.,
 "Accounts, invoices and taxes.","Comptes, factures et taxes",
@@ -1543,7 +1542,7 @@ Conditions and Formula variable and example,"Conditions, paramètres des formule
 Conditions will be applied on all the selected items combined. ,Les conditions seront appliquées sur tous les éléments sélectionnés combinés,
 Conditions,Conditions,
 Conference,Conférence,
-Configure Account Settings,Configurer les paramètres des comptes,
+Configure Account Settings,Configurer les paramètres de comptabilité,
 Configure Buying Settings.,Configurer les paramètres des achats,
 Configure Selling Settings.,Configurer les paramètres des ventes.,
 Configure the default Price List when creating a new Sales transaction. Item prices will be fetched from this Price List.,Configurez la liste de prix par défaut lorsque vos créez une nouvelle transaction de vente. La liste par défaut est 'Achat standard'. Les prix de l'article seront récupérés en fonction de cette liste de prix.,
@@ -7044,7 +7043,7 @@ Setting Account Type helps in selecting this Account in transactions.,Définir l
 "Setting Events to {0}, since the Employee attached to the below Sales Persons does not have a User ID{1}","Définir les Événements à {0}, puisque l'employé attaché au Commercial ci-dessous n'a pas d'ID Utilisateur {1}",
 Setting defaults,Définition des valeurs par défaut,
 Setting up company,Paramétrage de la société,
-Settings for Accounts,Paramètres des comptes,
+Settings for Accounts,Paramètres de comptabilité,
 Settings for Buying Module,Paramètres du Module Achat,
 Settings for Selling Module,Paramètres pour le module Vente,
 "Settings for online shopping cart such as shipping rules, price list etc.","Paramètres du panier tels que les règles de livraison, liste de prix, etc.",
