feat: French balance sheet

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -5852,7 +5852,7 @@ Provide Email Address registered in company,Fournir l'Adresse Email enregistrée
 Provident Fund Deductions,Déductions de prévoyance additionnelle,
 Provider,Fournisseur,
 Providing,Fournie,
-Provisional Profit / Loss (Credit),Gain / Perte (Crédit) Provisoire,
+Provisional Profit / Loss (Credit),Bénéfice / Perte (Crédit) Provisoire,
 Public token is missing for this bank,Le jeton public est manquant pour cette banque,
 Public,Publique,
 Publications,Publications,
@@ -7005,7 +7005,7 @@ Set Accepted Warehouse,Définir l'entrepôt de réception,
 Set Advances and Allocate (FIFO),Set Advances and Allocate (FIFO),
 Set Basic Rate Manually,Définir le prix unitaire de base manuellement,
 "Set Default Values like Company, Currency, Current Fiscal Year, etc.","Définir les Valeurs par Défaut comme : Societé, Devise, Exercice Actuel, etc...",
-Set Exchange Gain / Loss,Définir le change Gain / Perte,
+Set Exchange Gain / Loss,Définir le·la gain / perte de perte,
 Set From Warehouse,Définir depuis l'entrepôt,
 Set Invoice Value for B2C. B2CL and B2CS calculated based on this invoice value.,Défini la valeur de la facture pour B2C. B2CL et B2CS sont calculés sur la base de la valeur de cette facture.,
 Set Item Group-wise budgets on this Territory. You can also include seasonality by setting the Distribution.,Définir des budgets par Groupes d'Articles sur ce Territoire. Vous pouvez également inclure de la saisonnalité en définissant la Répartition.,
