chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -230,15 +230,15 @@ Accounts table cannot be blank.,Le tableau de comptes ne peut être vide.,
 "Accounts, invoices and taxes.","Comptes, factures et taxes",
 Accounts,Comptes,
 Accrual Journal Entry for salaries from {0} to {1},Ecritures de journal de provisions pour les salaires de {0} à {1},
-Accumulated Depreciation Account,Compte d'Amortissement Cumulé,
-Accumulated Depreciation Amount,Montant d'Amortissement Cumulé,
-Accumulated Depreciation as on,Amortissement Cumulé depuis,
-Accumulated Depreciation,Amortissement Cumulé,
-Accumulated Monthly,Cumul Mensuel,
+Accumulated Depreciation Account,Compte d'amortissement cumulé,
+Accumulated Depreciation Amount,Montant d'amortissement cumulé,
+Accumulated Depreciation as on,Amortissement cumulé depuis le,
+Accumulated Depreciation,Amortissement cumulé,
+Accumulated Monthly,Cumul mensuel,
 Accumulated Values in Group Company,Valeurs accumulées dans la société mère,
-Accumulated Values,Valeurs Accumulées,
+Accumulated Values,Valeurs accumulées,
 Achieved ({}),Réalisé ({}),
-Acquisition Date,Date d'Aquisition,
+Acquisition Date,Date d'aquisition,
 Action Doctype,Doctype Action,
 Action Document,Document d'Action,
 Action Field,Champ d'Action,
@@ -1983,23 +1983,23 @@ Default Cash Account,Compte de caisse par défaut,
 Default Company Bank Account,Compte bancaire par défaut de la société,
 Default Company,Société par Défaut,
 Default Cost Center,Centre de coûts par défaut,
-Default Cost of Goods Sold Account,Compte de Coûts des Marchandises Vendues par Défaut,
+Default Cost of Goods Sold Account,Compte de charges par défaut,
 Default Costing Rate,Coût de Revient par Défaut,
 Default Currency,Devise par défaut,
 Default Customer Group,Groupe de clients par défaut,
 Default Customer,Client par Défaut,
-Default Deferred Expense Account,Compte de dépenses différées par défaut,
+Default Deferred Expense Account,Compte de charges comptabilisés d'avance par défaut,
 Default Deferred Revenue Account,Compte de produits comptabilisés d'avance par défaut,
 Default Dimension,Dimension par défaut,
 Default Distance Unit,Unité de distance par défaut,
 Default Employee Advance Account,Compte d'avances versées aux employés par défaut,
 Default Expense Account,Compte de Charges par Défaut,
-Default Expense Claim Payable Account,Compte à payer pour les dépenses par défaut,
+Default Expense Claim Payable Account,Compte de notes de frais par défaut,
 Default Finance Book,Livre comptable par défaut,
 Default Finished Goods Warehouse,Entrepôt de Produits Finis par Défaut,
 Default Holiday List,Liste de congés par défaut,
-Default Income Account,Compte de Produits par Défaut,
-Default Inventory Account,Compte d'Inventaire par Défaut,
+Default Income Account,Compte de produits par défaut,
+Default Inventory Account,Compte de stock par défaut,
 Default Item Group,Groupe d'articles par défaut,
 Default Item Manufacturer,Fabricant d'article par défaut,
 Default Leave Policy,Politique de congés par défaut,
@@ -2007,16 +2007,16 @@ Default Letter Head,En-tête d'impression par défaut,
 Default Manufacturer Part No,N° d'élement de fabrication par défaut,
 Default Material Request Type,Type de Requête de Matériaux par Défaut,
 Default Naming Series,Série par défaut,
-Default Payable Account,Compte Créditeur par Défaut,
-Default Payable Accounts,Comptes Créditeur par Défaut,
+Default Payable Account,Compte fournisseur par défaut,
+Default Payable Accounts,Comptes fournisseur par défaut,
 Default Payment Request Message,Message de Demande de Paiement par Défaut,
 Default Payment Terms Template,Modèle de termes de paiement par défaut,
-Default Payroll Payable Account,Compte de Paie par Défaut,
+Default Payroll Payable Account,Compte de paie par défaut,
 Default Price List,Liste de prix par défaut,
 Default Priority,Priorité par défaut,
 Default Purchase Unit of Measure,Unité de Mesure par défaut à l'Achat,
 Default Quotation Validity Days,N° de jours de validité par défaut pour les devis,
-Default Receivable Account,Compte Client par Défaut,
+Default Receivable Account,Compte client par défaut,
 Default Round Off Account,Compte d'arrondi par défaut,
 Default Salary Structure,Structure salariale par défaut,
 Default Sales Unit of Measure,Unité de Mesure par défaut à la Vente,
@@ -2136,7 +2136,7 @@ Depreciation Amount,Montant d'Amortissement,
 Depreciation Date,Date d’Amortissement,
 Depreciation Eliminated due to disposal of assets,Amortissement Eliminé en raison de cessions d'actifs,
 Depreciation Entry,Ecriture d’amortissement,
-Depreciation Expense Account,Compte de Dotations aux Amortissement,
+Depreciation Expense Account,Compte de dotations aux amortissement,
 Depreciation Method,Méthode d'Amortissement,
 Depreciation Options,Options d'amortissement,
 Depreciation Row {0}: Depreciation Start Date is entered as past date,Ligne de d'amortissement {0}: La date de début de l'amortissement est dans le passé,
@@ -2202,11 +2202,11 @@ Disbursement Details,Détails des déboursements,
 Disbursement and Repayment,Déboursements et remboursements,
 Disc,Rem,
 Discount (%) on Price List Rate with Margin,Remise (%) sur le Tarif de la Liste de prix avec la Marge,
-Discount Allowed Account,Compte de remise autorisée,
+Discount Allowed Account,Compte de remises autorisées,
 Discount Amount,Remise,
 Discount Percentage can be applied either against a Price List or for all Price List.,Un pourcentage de remise peut être appliqué pour une liste de prix donnée ou pour toutes les listes de prix.,
 Discount Percentage,Remise en pourcentage,
-Discount Received Account,Compte de remise reçue,
+Discount Received Account,Compte de remises reçues,
 Discount Type,Type de remise,
 Discount amount cannot be greater than 100%,Le montant de la réduction ne peut pas être supérieur à 100%,
 Discount and Margin,Remise et Marge,
@@ -2505,7 +2505,7 @@ Enable Entry Grace Period,Autoriser un délai supplémentaire pour pour les enre
 Enable Exit Grace Period,Autoriser un délai supplémentaire pour pour les enregistrement de sortie,
 Enable Field Filters,Autoriser les filtres de champ,
 Enable Item Booking,Autoriser la réservation d'articles,
-Enable Perpetual Inventory,Autoriser l'Inventaire Perpétuel,
+Enable Perpetual Inventory,Autoriser l'inventaire permanent,
 Enable Scheduled Sync,Autoriser la synchronisation programmée,
 Enable Scheduled Synch,Activer la synchronisation programmée,
 Enable Shopify,Activer Shopify,
@@ -2602,8 +2602,8 @@ If series is set and Serial No is not mentioned in transactions, then automatic 
 "Example: ABCD.#####. If series is set and Batch No is not mentioned in transactions, then automatic batch number will be created based on this series. If you always want to explicitly mention Batch No for this item, leave this blank. Note: this setting will take priority over the Naming Series Prefix in Stock Settings.","Exemple: ABCD. #####. Si la série est définie et que le numéro de lot n'est pas mentionné dans les transactions, un numéro de lot sera automatiquement créé en avec cette série. Si vous préferez mentionner explicitement et systématiquement le numéro de lot pour cet article, laissez ce champ vide. Remarque: ce paramètre aura la priorité sur le préfixe de la série dans les paramètres de stock.",
 Exception Budget Approver Role,Rôle d'approbateur de budget exceptionnel,
 Excessive machine set up time,Temps de préparation de la machine excessif,
-Exchange Gain / Loss Account,Compte de Profits / Pertes sur Change,
-Exchange Gain/Loss,Profits / Pertes sur Change,
+Exchange Gain / Loss Account,Compte de gains / pertes de change,
+Exchange Gain/Loss,Gains / pertes de change,
 Exchange Rate Revaluation Account,Compte de réévaluation du taux de change,
 Exchange Rate Revaluation master.,Données base de réévaluation des taux de change,
 Exchange Rate Revaluation,Réévaluation du taux de change,
@@ -2660,7 +2660,7 @@ Expense account is mandatory for item {0},Compte de charge est obligatoire pour 
 Expense or Difference account is mandatory for Item {0} as it impacts overall stock value,Compte de Charge et d'Écarts est obligatoire pour objet {0} car il impacte la valeur globale des actions,
 Expense,Charges,
 Expenses Included In Asset Valuation,Dépenses incluses dans l'évaluation de l'actif,
-Expenses Included In Valuation,Charges Incluses dans la Valorisation,
+Expenses Included In Valuation,Dépenses incluses dans la valorisation,
 Expenses,Charges,
 Expire Allocation,Faire expirer l'allocation,
 Expire Carry Forwarded Leaves (Days),Expiration des congés reportés (Jours),
@@ -5136,7 +5136,7 @@ Personal Email,Email Personnel,
 Petrol,Essence,
 Pharmaceutical,Pharmaceutique,
 Pharmaceuticals,Médicaments,
-Phone No,N° de Téléphone,
+Phone No,N° de téléphone,
 Phone Number,Numéro de téléphone,
 Phone,Téléphone,
 Pick List Item,Article de liste de sélection,
@@ -5146,7 +5146,7 @@ Piecework,Travail à la Pièce,
 Pin Code,Code postal,
 Place Of Supply (State/UT),Lieu d'achat (Etat/Territoire de l'union),
 Place Order,Passer la commande,
-Place of Issue,Lieu d'Émission,
+Place of Issue,Lieu d'émission,
 Plaid Access Token,Jeton d'accès Plaid,
 Plaid Client ID,ID client Plaid,
 Plaid Environment,Environnement Plaid,
@@ -5174,7 +5174,7 @@ Planned,Prévu,
 Planning,Planification,
 Plans total,Total des plans,
 Plans,Plans,
-Plants and Machineries,Usines et Machines,
+Plants and Machineries,Usines et machines,
 Please <a href=\,Veuillez <a href=\,
 Please Select a Company.,Veuillez sélectionner une société.,
 Please Select a Company,Veuillez sélectionner une société,
@@ -5219,7 +5219,7 @@ Please enable Applicable on Purchase Order and Applicable on Booking Actual Expe
 Please enable default incoming account before creating Daily Work Summary Group,Veuillez activer un compte entrant par défaut avant de créer un groupe de récapitulatif quotidien,
 Please enable pop-ups,Veuillez activer les popups,
 Please enter 'Is Subcontracted' as Yes or No,Veuillez entrer Oui ou Non pour 'Est sous-traitée',
-Please enter <b>Difference Account</b> or set default <b>Stock Adjustment Account</b> for company {0},Veuillez sélectionner un <b>compte d'écart</b> ou définir un <b>compte d'ajustement du stock</b> par défaut pour la société {0},
+Please enter <b>Difference Account</b> or set default <b>Stock Adjustment Account</b> for company {0},Veuillez sélectionner un <b>compte d'écart</b> ou définir un <b>compte de variation du stock</b> par défaut pour la société {0},
 Please enter API Consumer Key,"Veuillez entrer la clé ""API Consumer Key""",
 Please enter API Consumer Secret,"Veuillez entrer la clé ""API Consumer Secret""",
 Please enter Account for Change Amount,Veuillez entrez un compte pour enregistrer le montant de monnaie rendue,
@@ -5273,8 +5273,8 @@ Please link this bank account with at least one Stripe account,Veuille lier ce c
 Please link your bank with Plaid first.,Veuillez d'abord lier votre banque avec Plaid,
 Please make sure you really want to delete all the transactions for this company. Your master data will remain as it is. This action cannot be undone.,Veuillez vous assurer que vous voulez vraiment supprimer tous les transactions de cette société. Vos données de base resteront intactes. Cette action ne peut être annulée.,
 Please mention Basic and HRA component in Company,Veuillez mentionner les composantes basique et HRA dans la société,
-Please mention Round Off Account in Company,Veuillez indiquer le Compte d’Arrondi de la Société,
-Please mention Round Off Cost Center in Company,Veuillez indiquer le Centre de coûts d’Arrondi de la Société,
+Please mention Round Off Account in Company,Veuillez indiquer le compte d’arrondis de la société,
+Please mention Round Off Cost Center in Company,Veuillez indiquer le centre de coûts pour les arrondis de la société,
 Please mention no of visits required,Veuillez indiquer le nb de visites requises,
 Please mention the Lead Name in Lead {0},Veuillez mentionner le nom du Prospect dans le Prospect {0},
 Please pull items from Delivery Note,Veuillez récupérer les articles des Bons de Livraison,
@@ -6248,8 +6248,8 @@ Root Type is mandatory,Le Type de racine est obligatoire,
 Root Type,Type de racine,
 Root cannot be edited.,La Racine ne peut pas être modifiée.,
 Root cannot have a parent cost center,Racine ne peut pas avoir un Centre de coûts parent,
-Round Off Account,Compte d’Arrondi,
-Round Off Cost Center,Centre de coûts d’Arrondi,
+Round Off Account,Compte d’arrondis,
+Round Off Cost Center,Centre de coûts pour les arrondis,
 Round Off,Arrondi,
 Round to the Nearest Integer,Arrondir à l'entier le plus proche,
 Rounded Total (Company Currency),Total Arrondi (Devise Société),
@@ -6775,7 +6775,7 @@ Serial number {0} entered more than once,Numéro de série {0} est entré plus d
 Series List for this Transaction,Liste des Séries pour cette Transaction,
 Series Updated Successfully,Mise à jour des Séries Réussie,
 Series Updated,Série Mise à Jour,
-Series for Asset Depreciation Entry (Journal Entry),Série pour la Dépréciation d'Actifs (Entrée de Journal),
+Series for Asset Depreciation Entry (Journal Entry),Série pour les ammotissements d'actifs (Ecriture de journal),
 Series is mandatory,Série est obligatoire,
 Series {0} already used in {1},Série {0} déjà utilisée dans le type de document {1},
 Series,Série,
@@ -6843,7 +6843,7 @@ Set as Default,Définir par défaut,
 Set as Lost,Considérer comme perdu,
 Set as Open,Définir comme Ouvert,
 Set as default,Définir par défaut,
-Set default inventory account for perpetual inventory,Configurer le compte d'inventaire par défaut pour l'inventaire perpétuel,
+Set default inventory account for perpetual inventory,Configurer le compte d'inventaire par défaut pour l'inventaire permanent,
 Set default mode of payment,Définir le mode de paiement par défaut,
 "Set item's shelf life in days, to set expiry based on manufacturing date plus shelf-life.","Définissez la durée de vie de l'article en jours, pour que la date d'expiration soit calculée sur la base de la date de fabrication + la durée de vie",
 Set prefix for numbering series on your transactions,Définir le préfixe des séries numérotées pour vos transactions,
@@ -7216,7 +7216,7 @@ Status must be one of {0},Le statut doit être l'un des {0},
 "Status of the booking. If the status is cancelled, the slot will remain available, else it will be considered as unavailable.","Statut de la réservation. Si le statut est annulé, le créneau est considéré comme disponible, sinon il est considéré comme indisponible.",
 Status,Statut,
 Statutory info and other general information about your Supplier,Informations légales et autres informations générales au sujet de votre Fournisseur,
-Stock Adjustment Account,Compte d'Ajustement du Stock,
+Stock Adjustment Account,Compte de variation du stock,
 Stock Adjustment,Ajustement du Stock,
 Stock Ageing,Balance agée des stocks,
 Stock Analytics,Analyse du Stock,
@@ -7248,11 +7248,11 @@ Stock Manager,Responsable des stocks,
 Stock Options,Options du Stock,
 Stock Projected Qty,Projections de stock,
 Stock Qty,Qté en Stock,
-Stock Queue (FIFO),File d'Attente du Stock (FIFO),
-Stock Received But Not Billed,Stock Reçus Mais Non Facturés,
-Stock Reconciliation Item,Article de Réconciliation du Stock,
-Stock Reconciliation,Réconciliation du Stock,
-Stock Reports,Rapports de Stock,
+Stock Queue (FIFO),File d'attente du stock (PEPS),
+Stock Received But Not Billed,Stock reçu non facturé,
+Stock Reconciliation Item,Article de réconciliation du stock,
+Stock Reconciliation,Réconciliation du stock,
+Stock Reports,Rapports de stock,
 Stock Settings,Paramètres des stocks,
 Stock Summary,Solde du stock,
 Stock Transactions for Item {0} cannot be posted before this time.,Les transactions de stock pour l'article {0} ne peuvent pas être comptabilisées avant cette date.,
