feat: Tour for company doctype - wip

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -498,7 +498,7 @@ Allow Material Transfer From Delivery Note and Sales Invoice,Autoriser les trans
 Allow Material Transfer From Purchase Receipt and Purchase Invoice,Autoriser les transferts de matériel depuis les reçus d'achat et les factures d'achat,
 Allow Monthly Depreciation,Autoriser les amortissements mensuels,
 Allow Multiple Material Consumption,Autoriser la consommation de plusieurs matériaux,
-Allow Negative Balance,Autoriser un Solde Négatif,
+Allow Negative Balance,Autoriser un solde négatif,
 Allow Negative Stock,Autoriser un stock négatif,
 Allow Overtime,Autoriser les Heures Supplémentaires,
 Allow Print Before Pay,Autoriser l'impression avant la paie,
@@ -1462,7 +1462,7 @@ Company field is required,Le champs Société est obligatoire,
 Company is manadatory for company account,La société est le maître d'œuvre du compte d'entreprise,
 Company name not same,Le nom de la société n'est pas identique,
 Company of asset {0} and purchase document {1} doesn't matches.,Les sociétés de l'actif {0} et du document d'achat {1} ne correspondent pas,
-Company registration numbers for your reference. Tax numbers etc.,"Numéro d'immatriculation de la Société pour votre référence. Numéros de taxes, etc.",
+Company registration numbers for your reference. Tax numbers etc.,"Numéro d'immatriculation de la société, etc...",
 Company {0} already exists. Continuing will overwrite the Company and Chart of Accounts,La société {0} existe déjà. En continuant vous écraserez les données de la société et son plan comptable.,
 Company {0} does not exist,Société {0} n'existe pas,
 "Company, Payment Account, From Date and To Date is mandatory","Société, compte de paiement, date de début et date de fin sont obligatoires",
@@ -2333,11 +2333,11 @@ E-Way Bill already exists for this document,Une facture JSON E-Way existe pour c
 EAN,EAN,
 EMI,EMI,
 EMP/,EMP/,
-ERPNext Account,Compte ERPNext,
-ERPNext Company,Société dokos,
-ERPNext Integrations,Intégrations dokos,
-ERPNext User ID,ID d'utilisateur dokos,
-ERPNext User,Utilisateur ERPNext,
+ERPNext Account,Compte Dokos,
+ERPNext Company,Société Dokos,
+ERPNext Integrations,Intégrations Dokos,
+ERPNext User ID,ID d'utilisateur Dokos,
+ERPNext User,Utilisateur Dokos,
 ES,ES,
 EXP,EXP,
 Each Transaction,A chaque transaction,
@@ -2479,7 +2479,7 @@ Employee {0} has already applied for {1} on {2} : ,L'employé {0} a déjà postu
 Employee {0} has no maximum benefit amount,L'employé {0} n'a pas de montant maximal d'avantages sociaux,
 Employee {0} is not active or does not exist,"L'employé {0} n'est pas actif, ou n'existe pas",
 Employee {0} is on Leave on {1},L'employé {0} est en congés le {1},
-Employee {0} of grade {1} have no default leave policy,L'employé {0} avec l'échelon {1} n'a pas de politique de congé par défaut,
+Employee {0} of grade {1} have no default leave policy,L'employé {0} avec l'échelon {1} n'a pas de politique de congés par défaut,
 Employee {0} on Half day on {1},Employé {0} sur une demi-journée sur {1},
 "Employee, Leaves and more.","Employés, congés et plus.",
 Employee,Employé,
@@ -2519,7 +2519,7 @@ Enabled,Activé,
 Encashable days,Jours encaissables,
 Encashment Amount,Montant d'encaissement,
 Encashment Date,Date de l'Encaissement,
-Encashment Threshold Days,Jours de seuil d'encaissement,
+Encashment Threshold Days,Seuil de jours d'encaissement,
 Encashment,Encaissement,
 Encrypt Salary Slips in Emails,Crypter les fiches de paie dans les emails,
 End Date can not be less than Start Date,La date de Fin ne peut pas être antérieure à la Date de Début,
@@ -3850,16 +3850,16 @@ Lead,Prospect,
 Leaderboard,Classement,
 "Leads help you get business, add all your contacts and more as your leads","Les prospects vous aident à obtenir des contrats, ajoutez tous vos contacts et plus dans votre liste de prospects",
 Learn More,Apprendre Plus,
-Leave Allocation,Allocation de Congés,
+Leave Allocation,Allocation de congés,
 Leave Allocations,Allocations de congé,
-Leave Application,Demande de Congés,
+Leave Application,Demande de congés,
 Leave Approval Notification Template,Modèle de notification d'approbation de congés,
 Leave Approval Notification,Notification d'approbation de congés,
 Leave Approver Mandatory In Leave Application,Approbateur de congés obligatoire dans une demande de congé,
 Leave Approver Name,Nom de l'Approbateur de congés,
 Leave Approver,Approbateur de congés,
-Leave Approvers,Approbateurs de Congés,
-Leave Balance Before Application,Solde de Congés Avant Demande,
+Leave Approvers,Approbateurs de congés,
+Leave Balance Before Application,Solde de congés avant demande,
 Leave Balance,Solde de congés,
 Leave Block List Allow,Autoriser la Liste de Blocage des Congés,
 Leave Block List Allowed,Liste de Blocage des Congés Autorisée,
@@ -3871,12 +3871,12 @@ Leave Blocked,Laisser Verrouillé,
 Leave Control Panel,Panneau de configuration des congés,
 Leave Encashed?,Laisser Encaissé ?,
 Leave Encashment Amount Per Day,Montant d'encaissement des congés par jour,
-Leave Encashment,Congés Accumulés à Encaisser,
+Leave Encashment,Congés accumulés à encaisser,
 Leave Ledger Entry,Ecriture de livre de congés,
 Leave Period,Période de congé,
-Leave Policy Detail,Détail de la politique de congé,
-Leave Policy Details,Détails de la politique de congé,
-Leave Policy,Politique de congé,
+Leave Policy Detail,Détail de la politique de congés,
+Leave Policy Details,Détails de la politique de congés,
+Leave Policy,Politique de congés,
 Leave Settings,Paramètres des Congés,
 Leave Status Notification Template,Modèle de notification de statut des congés,
 Leave Status Notification,Notification de statut des congés,
@@ -5409,7 +5409,7 @@ Please set default {0} in Company {1},Veuillez définir {0} par défaut dans la 
 Please set either the Tax ID or Fiscal Code on Company '%s',Veuillez ajouter un numéro de TVA ou un numéro d'identification fiscal pour la société '%s',
 Please set filter based on Item or Warehouse due to a large amount of entries.,Veuillez définir un filtre par article ou entrepôt à cause du très grand nombre d'entrées,
 Please set filter based on Item or Warehouse,Veuillez définir un filtre basé sur l'Article ou l'Entrepôt,
-Please set leave policy for employee {0} in Employee / Grade record,Veuillez définir la politique de congé pour l'employé {0} dans le dossier Employé / Grade,
+Please set leave policy for employee {0} in Employee / Grade record,Veuillez définir la politique de congés pour l'employé {0} dans le dossier Employé / Grade,
 Please set recurring after saving,Veuillez définir la récurrence après avoir sauvegardé,
 Please set the Company,Veuillez définir la Société,
 Please set the Customer Address,Veuillez définir l'adresse du client,
@@ -6775,7 +6775,7 @@ Serial number {0} entered more than once,Numéro de série {0} est entré plus d
 Series List for this Transaction,Liste des Séries pour cette Transaction,
 Series Updated Successfully,Mise à jour des Séries Réussie,
 Series Updated,Série Mise à Jour,
-Series for Asset Depreciation Entry (Journal Entry),Série pour les ammotissements d'actifs (Ecriture de journal),
+Series for Asset Depreciation Entry (Journal Entry),Série pour les ammortissements d'actifs (Ecriture de journal),
 Series is mandatory,Série est obligatoire,
 Series {0} already used in {1},Série {0} déjà utilisée dans le type de document {1},
 Series,Série,
