feat: Specific settings for french companies + tour

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -2764,7 +2764,6 @@ First Name,Prénom,
 First Responded On,Première Réponse Le,
 First Response Time,Durée avant la première réponse,
 First add items in the Item Locations table,Veuillez commencer par ajouter vos articles dans le tableau de localisation des articles,
-First,First,
 "Fiscal Regime is mandatory, kindly set the fiscal regime in the company {0}","Le régime fiscal est obligatoire, veuillez le définir pour la société {0}",
 Fiscal Year Company,Société de l’Exercice Fiscal,
 Fiscal Year End Date should be one year after Fiscal Year Start Date,La date de fin de l'année fiscale doit être un an après la date de début de l'année fiscale,
@@ -6776,7 +6775,7 @@ Serial number {0} entered more than once,Numéro de série {0} est entré plus d
 Series List for this Transaction,Liste des Séries pour cette Transaction,
 Series Updated Successfully,Mise à jour des Séries Réussie,
 Series Updated,Série Mise à Jour,
-Series for Asset Depreciation Entry (Journal Entry),Série pour les ammortissements d'actifs (Ecriture de journal),
+Series for Asset Depreciation Entry (Journal Entry),Série pour les amortissements d'actifs (Ecriture de journal),
 Series is mandatory,Série est obligatoire,
 Series {0} already used in {1},Série {0} déjà utilisée dans le type de document {1},
 Series,Série,
