chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1755,6 +1755,7 @@ Create holiday list,Créer une liste de congés,
 Create missing customer or supplier.,Créer les clients ou les fournisseurs manquant,
 Create payment,Créer un paiement,
 Create rules to restrict transactions based on values.,Créer des règles pour restreindre les transactions basées sur les valeurs .,
+Create this company's chart of account based on a standard template or an existing company's chart of account. The chart of account can be edited manually after the initial creation.,Créez le plan comptable de cette société sur la base d'un modèle standard ou du plan comptable d'une société déjà existante. Il pourra être édité manuellement après la création.,
 Create your first Purchase Order,Créer une première commande fournisseur,
 Create your first Sales Order,Créer votre première commande client,
 Create,Créer,
@@ -3335,6 +3336,7 @@ If Income or Expense,Si Produits ou Charges,
 "If checked, employees will be allowed to apply for this leave type even if they don't have a sufficient balance. This will result in a negative balance for this type of leaves.","Si coché, les employés seront autorisés à demander ce type de congés même s'ils n'ont pas un solde suffisant. Cela résultera en un solde négatif pour ce type de congés.",
 "If checked, hides and disables Rounded Total field in Salary Slips","Si coché, le champ total arrondi sera caché dans les fiches de paie",
 "If checked, the Home page will be the default Item Group for the website","Si cochée, la page d'Accueil pour le site sera le Groupe d'article par défaut",
+"If checked, the balance leaves of this Leave Type will be carried forward to the next allocation period.","Si coché, le solde de congés de ce type de congés sera reporté sur la prochaine période d'allocation",
 "If checked, the full amount will be deducted from taxable income before calculating income tax without any declaration or proof submission.","Si coché, le montant total sera déduit du montant taxable avant de calculer l'impôt sur le revenu sans aucune déclaration ou pré-validation.",
 "If checked, the tax amount will be considered as already included in the Print Rate / Print Amount","Si cochée, le montant de la taxe sera considéré comme déjà inclus dans le prix net / montant net",
 If different than customer address,Si différente de l'adresse du client,
