fix: over billing error message

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4947,8 +4947,8 @@ Outstanding,Solde,
 "Outward taxable supplies(other than zero rated, nil rated and exempted)","Fournitures taxables à l'étranger (autres qu'à un taux zéro, taux nul ou exemptées)",
 "Outward taxable supplies(other than zero rated, nil rated and exempted","Fournitures taxables sortantes (autres qu'à un taux nul, zéro ou exempté)",
 Outward taxable supplies(zero rated),Fournitures taxables sortantes (à un taux zéro),
-Over Billing Allowance (%),Tolérance (%) à la facturation,
-Over Delivery/Receipt Allowance (%),Tolérance (%) à la livraison/réception,
+Over Billing Allowance (%),Tolérance à la facturation (%),
+Over Delivery/Receipt Allowance (%),Tolérance à la livraison/réception (%),
 Over Production for Sales and Work Order,Sur production pour la vente et les ordres de travail,
 Over Transfer Allowance (%),Tolérance de sur-transfert (%),
 Overdue and Discounted,En retard et affacturée,
@@ -7846,7 +7846,7 @@ This bank account is already synchronized,Ce compte bancaire est déjà synchron
 This bank transaction is already fully reconciled,Cette transaction bancaire est déjà complètement réconciliée,
 This company will be used to create Sales Orders.,Cette société sera utilisée pour créer des commandes client,
 This covers all scorecards tied to this Setup,Cela couvre toutes les fiches d'Évaluation liées à cette Configuration,
-This document is over limit by {0} {1} for item {4}. Are you making another {3} against the same {2}?,Ce document excède la limite de {0} {1} pour l’article {4}. Faites-vous un autre {3} contre le même {2} ?,
+This document is over limit by a/an {0} of {1} for item {4}. Are you making another {3} against the same {2}?,Ce document excède la limite de/d'un {0} de {1} pour l’article {4}. Faites-vous un·e autre {3} pour le même {2} ?,
 This document will be automatically deleted in {0} minutes if not validated.,Ce document sera automatiquement supprimé dans {0} minutes s'il n'est pas validé,
 This employee already has a log with the same timestamp.{0},Cet employé a déjà un journal avec le même horodatage. {0},
 This event will be processed after the {},Cet événement sera traité après le {},
@@ -7973,8 +7973,8 @@ To Value,Valeur Finale,
 To Warehouse (Optional),À l'Entrepôt (Facultatif),
 To Warehouse,À l'Entrepôt,
 "To allow different rates, disable the {0} checkbox in {1}.","Pour permettre différents prix unitaires, veuillez désactiver la case {0} dans {1}.",
-"To allow over billing, update ""Over Billing Allowance"" in Accounts Settings or the Item.","Pour autoriser la sur-facturation, mettez à jour la 'Tolérance (%) à la facturation' dans les paramètres de comptabilité ou l'article",
-"To allow over receipt / delivery, update ""Over Receipt/Delivery Allowance"" in Stock Settings or the Item.","Pour autoriser la sur-réception/sur-livraison, mettez à jour  la 'Tolérance (%) à la livraison/réception' dans les paramètres des stocks ou l'article",
+"To allow over billing, update ""Over Billing Allowance"" in Accounts Settings or the Item.","Pour autoriser la sur-facturation, mettez à jour la 'Tolérance à la facturation (%)' dans les paramètres de comptabilité ou l'article",
+"To allow over receipt / delivery, update ""Over Receipt/Delivery Allowance"" in Stock Settings or the Item.","Pour autoriser la sur-réception/sur-livraison, mettez à jour  la 'Tolérance à la livraison/réception (%)' dans les paramètres des stocks ou l'article",
 To be delivered to customer,À livrer à la clientèle,
 To be used to get discount,Code à utiliser pour obtenir une promotion,
 To create a Payment Request reference document is required,"Pour créer une Demande de Paiement, un document de référence est requis",
